--- a/MainPage.tex
+++ b/MainPage.tex
@@ -45,9 +45,9 @@
 \pagenumbering{arabic}
 
 % Chapters
-\include{Chapters/01-Introduction}
-\include{Chapters/02-Variables}
-\include{Chapters/03-Notes}
+\include{Chapters/01-ShellMgr}
+\include{Chapters/02-PythonBasics}
+\include{Chapters/03-PythonImage}
 
 % Bibliography
 %\blankpage
