--- a/MainPage.tex
+++ b/MainPage.tex
@@ -54,7 +54,7 @@
 \printbibliography
 
 % Annexes: Work that *YOU DID NOT* developed
-\input{Chapters/Annexes/00-AnnexA}
+%\input{Chapters/Annexes/00-AnnexA}
 
 % Back Page
 \input{Matter/08-BPage}
