--- a/Bibliography/Bibliography.bib
+++ b/Bibliography/Bibliography.bib
@@ -17,3 +17,11 @@
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Interrupt&oldid=1243602968}",
     note = "[Online; accessed 12-September-2024]"
   }
+
+@techreport{天海一直在AI2022,
+  author = {天海一直在AI},
+  institution = {CSDN},
+  title = {计算机视觉：基于Numpy的图像处理技术（一）：灰度变换、直方图均衡化},
+  year = {2022},
+  url = {https://blog.csdn.net/tianhai12/article/details/127941909},
+}
